fix: add new migrations
