# src/swagger/routes.ts
@@ -24,10 +24,10 @@ const models: TsoaRoute.Models = {
             "created_at": {"dataType":"datetime","required":true},
             "update_at": {"dataType":"datetime","required":true},
             "metric_name": {"dataType":"string","required":true},
-            "timestamp": {"dataType":"datetime","required":true},
+            "time_stamp": {"dataType":"datetime","required":true},
             "value": {"dataType":"double","required":true},
             "result_type": {"dataType":"string","required":true},
-            "app_name": {"dataType":"string","required":true},
+            "app": {"dataType":"string","required":true},
             "instance": {"dataType":"string","required":true},
             "job": {"dataType":"string","required":true},
             "incident": {"ref":"Incident","required":true},
